--- a/wafer2-startup-master/client/pages/info/info.wxml
+++ b/wafer2-startup-master/client/pages/info/info.wxml
@@ -23,7 +23,7 @@
 </view>
 
 <view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell" bindtap="open">
+  <view class="weui-cell" bindtap="open" data-phones="123,456">
     <view class="weui-cell__hd">
       <image src="{{icon}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
     </view>
